--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="icon" href="images\icon.svg">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   </head>
   <body>
 
@@ -132,7 +134,7 @@
             family daily.
           </p>
           <div class='btns'>
-            <button>Campground Calendar</button>
+            <button class="calendarBtn">Campground Calendar</button>
             <button class="galleryBtn">Campground Gallery</button>
           </div>
         </div>
@@ -251,7 +253,9 @@
 
     <div class='rules modal hidden'>
       <div class='exitBtn-container'>
-        <button class='exitBtn'>X</button>
+        <span class="material-symbols-outlined exitBtn">
+          close
+        </span>
       </div>
       <h2 class='section-title'>Campground Rules</h2>
       <textarea
@@ -285,7 +289,9 @@
 
     <div class='rates modal hidden'>
       <div class='exitBtn-container'>
-        <button class='exitBtn'>X</button>
+        <span class="material-symbols-outlined exitBtn">
+          close
+        </span>
       </div>
       <h2 class='section-title'>Campground Rates</h2>
       <table>
@@ -339,6 +345,32 @@
           </tr>
         </tbody>
       </table>
+    </div>
+
+    <div class="calendar modal hidden">
+      <div class="calendar-body">
+        <div class="wrapper">
+          <header>
+            <p class="current-date"></p>
+            <div class="icons">
+              <span id="prev" class="material-symbols-rounded">chevron_left</span>
+              <span id="next" class="material-symbols-rounded">chevron_right</span>
+            </div>
+          </header>
+          <div class="calendar">
+            <ul class="weeks">
+              <li>Sun</li>
+              <li>Mon</li>
+              <li>Tue</li>
+              <li>Wed</li>
+              <li>Thu</li>
+              <li>Fri</li>
+              <li>Sat</li>
+            </ul>
+            <ul class="days"></ul>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="gallery modal hidden">
