--- a/index.html
+++ b/index.html
@@ -224,6 +224,10 @@
         </button>
     </section>
 
+    <section id="section--5" class="section">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6490.405494251006!2d-81.04587318746991!3d35.573387269668835!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8856b4f4d7ee4fdf%3A0x146f22340eaa9756!2sCross%20Country%20Campgrounds!5e0!3m2!1sen!2sus!4v1696946081240!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
+
     <div id="footer">
         <div class="info">
           <div class="address">
@@ -348,6 +352,12 @@
     </div>
 
     <div class="calendar modal hidden">
+      <div class='exitBtn-container'>
+        <span class="material-symbols-outlined exitBtn">
+          close
+        </span>
+      </div>
+      <h2 class='section-title'>Camground Calendar</h2>
       <div class="calendar-body">
         <div class="wrapper">
           <header>
@@ -374,6 +384,11 @@
     </div>
 
     <div class="gallery modal hidden">
+      <div class='exitBtn-container'>
+        <span class="material-symbols-outlined exitBtn">
+          close
+        </span>
+      </div>
     <h2 class='section-title'>Campground Gallery</h2>
     <div id="gallery" class="slider">      
       <div class="slides">
